--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -1,15 +1,45 @@
 {% load static %}
-<!doctype html>
-<html lang="fa">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport"
-              content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-        <title>Document</title>
-    </head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Trie Dictionary Online</title>
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+
+    <style>
+        .main-card {
+            width: 40rem;
+            margin-top: 10rem;
+            background-color: rgba(240, 248, 255, 0.6);
+        }
+    </style>
+</head>
+<!-- partial:index.partial.html -->
 <body>
-    <div>دانشگاه بزرگ شیراز</div>
+
+<div class="container">
+    <div class="card mx-auto border-0 main-card ">
+        <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+    </div>
+
+</div>
+
+
+<div class="wave"></div>
+<div class="wave"></div>
+<div class="wave"></div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
+</body>
+<!-- partial -->
+
 </body>
 </html>
