change home template

--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -22,10 +22,20 @@
 <div class="container">
     <div class="card mx-auto border-0 main-card ">
         <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <ul class="nav justify-content-center" style="border-bottom: 1px solid #8b8b8b;">
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Help</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Search word</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link disabled">Add word</a>
+                </li>
+            </ul>
         </div>
     </div>
 
