--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -24,18 +24,42 @@
         <div class="card-body">
             <ul class="nav justify-content-center" style="border-bottom: 1px solid #8b8b8b;">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#">About</a>
+                    <a class="nav-link fw-bold" style="color: #4a4a4a;" data-bs-toggle="collapse" href="#AboutBox"
+                       role="button"
+                       aria-expanded="false" aria-controls="AboutBox" data-bs-parent="#NavGroup">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Help</a>
+                    <a class="nav-link fw-bold" style="color: #4a4a4a;" data-bs-toggle="collapse" href="#HelpBox"
+                       role="button"
+                       aria-expanded="false" aria-controls="HelpBox" data-bs-parent="#NavGroup">Help</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Search word</a>
+                    <a class="nav-link fw-bold" style="color: #4a4a4a;" data-bs-toggle="collapse" href="#SearchWordBox"
+                       role="button"
+                       aria-expanded="true" aria-controls="SearchWordBox" data-bs-parent="#NavGroup">Search Word</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled">Add word</a>
+                    <a class="nav-link fw-bold" style="color: #4a4a4a;" data-bs-toggle="collapse" href="#AddWordBox"
+                       role="button"
+                       aria-expanded="false" aria-controls="AddWordBox" data-bs-parent="#NavGroup">Add Word</a>
                 </li>
             </ul>
+            <div class="row" >
+                    <div class="collapse multi-collapse" id="AboutBox">
+                        Developed By MHD , MHSN
+                    </div>
+                    <div class="collapse multi-collapse" id="HelpBox">
+                        here is help
+                    </div>
+                    <div class="collapse multi-collapse show" id="SearchWordBox">
+                        here is search word
+                    </div>
+                    <div class="collapse multi-collapse" id="AddWordBox">
+                        Here is add word
+                    </div>
+            </div>
+
+
         </div>
     </div>
 
