change some partial color

--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -12,7 +12,7 @@
         .main-card {
             width: 40rem;
             margin-top: 10rem;
-            background-color: rgba(240, 248, 255, 0.6);
+            background-color: rgba(240, 248, 255, 0.4);
         }
     </style>
 </head>
@@ -22,7 +22,7 @@
 <div class="container">
     <div class="card mx-auto border-0 main-card ">
         <div class="card-body">
-            <ul class="nav justify-content-center" style="border-bottom: 1px solid #8b8b8b;">
+            <ul class="nav justify-content-center mb-2" style="border-bottom: 1px solid #4a4a4a;">
                 <li class="nav-item">
                     <a class="nav-link fw-bold" style="color: #4a4a4a;" data-bs-toggle="collapse" href="#AboutBox"
                        role="button"
