add shadow to card

--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -13,6 +13,7 @@
             width: 40rem;
             margin-top: 10rem;
             background-color: rgba(240, 248, 255, 0.4);
+            border-radius: 20px;
         }
     </style>
 </head>
@@ -20,7 +21,7 @@
 <body>
 
 <div class="container">
-    <div class="card mx-auto border-0 main-card ">
+    <div class="card mx-auto border-0 main-card shadow-sm">
         <div class="card-body">
             <ul class="nav justify-content-center mb-2" style="border-bottom: 1px solid #4a4a4a;">
                 <li class="nav-item">
@@ -44,19 +45,19 @@
                        aria-expanded="false" aria-controls="AddWordBox" data-bs-parent="#NavGroup">Add Word</a>
                 </li>
             </ul>
-            <div class="row" >
-                    <div class="collapse multi-collapse" id="AboutBox">
-                        Developed By MHD , MHSN
-                    </div>
-                    <div class="collapse multi-collapse" id="HelpBox">
-                        here is help
-                    </div>
-                    <div class="collapse multi-collapse show" id="SearchWordBox">
-                        here is search word
-                    </div>
-                    <div class="collapse multi-collapse" id="AddWordBox">
-                        Here is add word
-                    </div>
+            <div class="row">
+                <div class="collapse multi-collapse" id="AboutBox">
+                    Developed By MHD , MHSN
+                </div>
+                <div class="collapse multi-collapse" id="HelpBox">
+                    here is help
+                </div>
+                <div class="collapse multi-collapse show" id="SearchWordBox">
+                    here is search word
+                </div>
+                <div class="collapse multi-collapse" id="AddWordBox">
+                    Here is add word
+                </div>
             </div>
 
 
