make color darker

--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -23,24 +23,24 @@
 <div class="container">
     <div class="card mx-auto border-0 main-card shadow-sm">
         <div class="card-body">
-            <ul class="nav justify-content-center mb-3" style="border-bottom: 1px solid #4a4a4a;">
+            <ul class="nav justify-content-center mb-3" style="border-bottom: 1px solid #383838;">
                 <li class="nav-item">
-                    <a class="nav-link fw-bold" style="color: #4a4a4a;" data-bs-toggle="collapse" href="#AboutBox"
+                    <a class="nav-link fw-bold" style="color: #383838;" data-bs-toggle="collapse" href="#AboutBox"
                        role="button"
                        aria-expanded="false" aria-controls="AboutBox">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link fw-bold" style="color: #4a4a4a;" data-bs-toggle="collapse" href="#HelpBox"
+                    <a class="nav-link fw-bold" style="color: #383838;" data-bs-toggle="collapse" href="#HelpBox"
                        role="button"
                        aria-expanded="false" aria-controls="HelpBox">Help</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link fw-bold" style="color: #4a4a4a;" data-bs-toggle="collapse" href="#SearchWordBox"
+                    <a class="nav-link fw-bold" style="color: #383838;" data-bs-toggle="collapse" href="#SearchWordBox"
                        role="button"
                        aria-expanded="true" aria-controls="SearchWordBox">Search Word</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link fw-bold" style="color: #4a4a4a;" data-bs-toggle="collapse" href="#AddWordBox"
+                    <a class="nav-link fw-bold" style="color: #383838;" data-bs-toggle="collapse" href="#AddWordBox"
                        role="button"
                        aria-expanded="false" aria-controls="AddWordBox">Add Word</a>
                 </li>
