--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -11,7 +11,7 @@
     <style>
         .main-card {
             width: 40rem;
-            margin-top: 10rem;
+            margin-top: 5rem;
             background-color: rgba(240, 248, 255, 0.31);
             border-radius: 20px;
         }
@@ -21,26 +21,32 @@
 <body>
 
 <div class="container">
+
+{#===========================HEADER=============================#}
+    <p class="text-center text-light display-1" style="margin-top: 5rem; text-shadow: 2px 2px rgba(60,60,60,0.3)">Trie Dictionary Online</p>
+
+{#===========================MAIN CARD=============================#}
+
     <div class="card mx-auto border-0 main-card shadow-sm">
         <div class="card-body">
             <ul class="nav justify-content-center mb-3" style="border-bottom: 1px solid #383838;">
                 <li class="nav-item">
-                    <a class="nav-link fw-bold" style="color: #383838;" data-bs-toggle="collapse" href="#AboutBox"
+                    <a class="nav-link fw-bold" style="color: #303030;" data-bs-toggle="collapse" href="#AboutBox"
                        role="button"
                        aria-expanded="false" aria-controls="AboutBox">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link fw-bold" style="color: #383838;" data-bs-toggle="collapse" href="#HelpBox"
+                    <a class="nav-link fw-bold" style="color: #303030;" data-bs-toggle="collapse" href="#HelpBox"
                        role="button"
                        aria-expanded="false" aria-controls="HelpBox">Help</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link fw-bold" style="color: #383838;" data-bs-toggle="collapse" href="#SearchWordBox"
+                    <a class="nav-link fw-bold" style="color: #303030;" data-bs-toggle="collapse" href="#SearchWordBox"
                        role="button"
                        aria-expanded="true" aria-controls="SearchWordBox">Search Word</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link fw-bold" style="color: #383838;" data-bs-toggle="collapse" href="#AddWordBox"
+                    <a class="nav-link fw-bold" style="color: #303030;" data-bs-toggle="collapse" href="#AddWordBox"
                        role="button"
                        aria-expanded="false" aria-controls="AddWordBox">Add Word</a>
                 </li>
