--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -11,7 +11,7 @@
     <style>
         .main-card {
             width: 40rem;
-            margin-top: 5rem;
+            {#margin-top: 5rem;#}
             background-color: rgba(240, 248, 255, 0.31);
             border-radius: 20px;
         }
@@ -23,8 +23,9 @@
 <div class="container">
 
 {#===========================HEADER=============================#}
-    <p class="text-center text-light display-1" style="margin-top: 5rem; text-shadow: 2px 2px rgba(60,60,60,0.3)">Trie Dictionary Online</p>
-
+    <p class="text-center text-light display-2 mb-0" style="margin-top: 4rem; text-shadow: 2px 2px rgba(60,60,60,0.3)">Trie Dictionary Online</p>
+{#    <img class="mx-auto d-block" width="350rem" height="140rem" src="{% static 'img/Untitled-1.png' %}" alt="">#}
+ <img class="mx-auto d-block" width="300rem" height="75rem" src="{% static 'img/header-1.png' %}" alt="">
 {#===========================MAIN CARD=============================#}
 
     <div class="card mx-auto border-0 main-card shadow-sm">
