--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -11,7 +11,7 @@
     <style>
         .main-card {
             width: 40rem;
-            {#margin-top: 5rem;#}
+            margin-top: 1rem;
             background-color: rgba(240, 248, 255, 0.31);
             border-radius: 20px;
         }
