--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -11,7 +11,7 @@
     <style>
         .main-card {
             width: 40rem;
-            margin-top: 1rem;
+            margin-top: 1.5rem;
             background-color: rgba(240, 248, 255, 0.31);
             border-radius: 20px;
         }
@@ -72,9 +72,9 @@
 </div>
 
 
-<div class="wave"></div>
-<div class="wave"></div>
-<div class="wave"></div>
+<div class="wave" style="height: 8em"></div>
+<div class="wave" style="height: 8em"></div>
+<div class="wave" style="height: 8em"></div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
