--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -61,7 +61,7 @@
                     here is help
                 </div>
                 <div class="collapse multi-collapse show" id="SearchWordBox" data-bs-parent="#NavGroup">
-                    <form action="{% url 'home' %}" method="POST">
+                    <form action="{% url 'search_word' %}" method="POST">
                         {% csrf_token %}
                         <div class="row">
                             <div class="col-10">
@@ -77,7 +77,20 @@
                     </form>
                 </div>
                 <div class="collapse multi-collapse" id="AddWordBox" data-bs-parent="#NavGroup">
-                    Here is add word
+                     <form action="{% url 'add_word' %}" method="POST">
+                        {% csrf_token %}
+                        <div class="row">
+                            <div class="col-10">
+                                <input class="form-control"
+                                       style="background-color: rgba(0,0,0,0); border-color: #303030" type="text"
+                                       placeholder="some thing like word ...." name="word">
+                            </div>
+                            <div class="col-2">
+                                <button type="submit" class="btn btn-outline-dark">Add</button>
+                            </div>
+
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
