--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -1,78 +1,72 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Trie Dictionary Online</title>
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <head>
+        <meta charset="UTF-8">
+        <title>Trie Dictionary Online</title>
+        <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+              integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
-    <style>
-        .main-card {
-            width: 40rem;
-            margin-top: 10rem;
-            background-color: rgba(240, 248, 255, 0.4);
-            border-radius: 20px;
-        }
-    </style>
-</head>
-<!-- partial:index.partial.html -->
-<body>
-
-<div class="container">
-    <div class="card mx-auto border-0 main-card shadow-sm">
-        <div class="card-body">
-            <ul class="nav justify-content-center mb-3" style="border-bottom: 1px solid #383838;">
-                <li class="nav-item">
-                    <a class="nav-link fw-bold" style="color: #383838;" data-bs-toggle="collapse" href="#AboutBox"
-                       role="button"
-                       aria-expanded="false" aria-controls="AboutBox">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link fw-bold" style="color: #383838;" data-bs-toggle="collapse" href="#HelpBox"
-                       role="button"
-                       aria-expanded="false" aria-controls="HelpBox">Help</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link fw-bold" style="color: #383838;" data-bs-toggle="collapse" href="#SearchWordBox"
-                       role="button"
-                       aria-expanded="true" aria-controls="SearchWordBox">Search Word</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link fw-bold" style="color: #383838;" data-bs-toggle="collapse" href="#AddWordBox"
-                       role="button"
-                       aria-expanded="false" aria-controls="AddWordBox">Add Word</a>
-                </li>
-            </ul>
-            <div class="row" id="NavGroup">
-                <div class="collapse multi-collapse" id="AboutBox" data-bs-parent="#NavGroup">
-                    Developed By MHD , MHSN
-                </div>
-                <div class="collapse multi-collapse" id="HelpBox" data-bs-parent="#NavGroup">
-                    here is help
-                </div>
-                <div class="collapse multi-collapse show" id="SearchWordBox" data-bs-parent="#NavGroup">
-                    here is search word
-                </div>
-                <div class="collapse multi-collapse" id="AddWordBox" data-bs-parent="#NavGroup">
-                    Here is add word
+        <style>
+            .main-card {
+                width: 40rem;
+                margin-top: 10rem;
+                border-radius: 20px;
+                background-color: rgba(240, 248, 255, 0.4);
+            }
+        </style>
+    </head>
+    <!-- partial:index.partial.html -->
+    <body>
+        <div class="container">
+            <div class="card mx-auto border-0 main-card shadow-sm">
+                <div class="card-body">
+                    <ul class="nav justify-content-center mb-3" style="border-bottom: 1px solid #383838;">
+                        <li class="nav-item">
+                            <a class="nav-link fw-bold" style="color: #383838;" data-bs-toggle="collapse" href="#AboutBox"
+                               role="button"
+                               aria-expanded="false" aria-controls="AboutBox">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link fw-bold" style="color: #383838;" data-bs-toggle="collapse" href="#HelpBox"
+                               role="button"
+                               aria-expanded="false" aria-controls="HelpBox">Help</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link fw-bold" style="color: #383838;" data-bs-toggle="collapse" href="#SearchWordBox"
+                               role="button"
+                               aria-expanded="true" aria-controls="SearchWordBox">Search Word</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link fw-bold" style="color: #383838;" data-bs-toggle="collapse" href="#AddWordBox"
+                               role="button"
+                               aria-expanded="false" aria-controls="AddWordBox">Add Word</a>
+                        </li>
+                    </ul>
+                    <div class="row" id="NavGroup">
+                        <div class="collapse multi-collapse" id="AboutBox" data-bs-parent="#NavGroup">
+                            Developed By SeMHSN and theMHD
+                        </div>
+                        <div class="collapse multi-collapse" id="HelpBox" data-bs-parent="#NavGroup">
+                            here is help
+                        </div>
+                        <div class="collapse multi-collapse show" id="SearchWordBox" data-bs-parent="#NavGroup">
+                            here is search word
+                        </div>
+                        <div class="collapse multi-collapse" id="AddWordBox" data-bs-parent="#NavGroup">
+                            Here is add word
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-</div>
-
-
-<div class="wave"></div>
-<div class="wave"></div>
-<div class="wave"></div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-        crossorigin="anonymous"></script>
-</body>
-<!-- partial -->
-
-</body>
+        <div class="wave"></div>
+        <div class="wave"></div>
+        <div class="wave"></div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+                crossorigin="anonymous"></script>
+    </body>
 </html>
