--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -13,13 +13,14 @@
                 width: 40rem;
                 margin-top: 5rem;
                 border-radius: 20px;
-                background-color: rgba(240, 248, 255, 0.89);
+                background-color: rgba(255, 255, 255, 0.4);
+                backdrop-filter: blur(20px);
             }
         </style>
     </head>
     <!-- partial:index.partial.html -->
     <body>
-        =======
+
         <div class="container">
 
             {#===========================HEADER=============================#}
@@ -90,17 +91,9 @@
 
                                 </div>
                             </form>
-        >>>>>>> ab9a650f935d081ac98169d305c9a097d96dfa45
                         </div>
                     </div>
                 </div>
-        <<<<<<< HEAD
-                <div class="wave"></div>
-                <div class="wave"></div>
-                <div class="wave"></div>
-                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-                        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-        ======
             </div>
         </div>
 
@@ -110,7 +103,5 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
                 crossorigin="anonymous"></script>
-        <!-- partial -->
-        >>>>>>> ab9a650f935d081ac98169d305c9a097d96dfa45
     </body>
 </html>
