--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -5,33 +5,42 @@
         <meta charset="UTF-8">
         <title>Trie Dictionary Online</title>
         <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+        <link rel="icon" href="{% static 'img/header-1.png' %}" type="image/x-icon">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
               integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
         <style>
             .main-card {
                 width: 40rem;
+                height: 12rem;
+                transition: 0.5s;
                 margin-top: 5rem;
                 border-radius: 20px;
-                background-color: rgba(240, 248, 255, 0.89);
+                backdrop-filter: blur(5px);
+                background-color: rgba(240, 248, 255, 0.65);
+                box-shadow: rgba(255, 0, 0, 0.32) 0 3px 90px 10px;
+            }
+            .main-card:hover {
+                transform: translateY(-3px);
+                background-color: rgba(227, 231, 250, 0.92);
+                box-shadow: rgba(162, 4, 4, 0.6) 0 10px 45px 10px;
             }
         </style>
     </head>
     <!-- partial:index.partial.html -->
     <body>
-        =======
-        <div class="container">
 
+        <div class="container">
             {#===========================HEADER=============================#}
-            <p class="text-center text-light display-2 mb-0" style="margin-top: 4rem; text-shadow: 2px 2px rgba(60,60,60,0.3)">
+            <p class="text-center text-light display-2 mb-0" style="margin: 7.5rem; font-weight: 327; text-shadow: rgb(60,60,60) 0 5px 5px;">
                 Trie Dictionary Online</p>
             {#    <img class="mx-auto d-block" width="350rem" height="140rem" src="{% static 'img/Untitled-1.png' %}" alt="">#}
-            <img class="mx-auto d-block" width="300rem" height="75rem" src="{% static 'img/header-1.png' %}" alt="">
+            <img class="mx-auto d-block" width="300rem" height="75rem" style="margin-top: 2rem" src="{% static 'img/header-1.png' %}" alt="">
             {#===========================MAIN CARD=============================#}
 
-            <div class="card mx-auto border-0 main-card shadow-sm">
+            <div class="card mx-auto main-card">
                 <div class="card-body">
-                    <ul class="nav justify-content-center mb-3" style="border-bottom: 1px solid #383838;">
+                    <ul class="nav justify-content-center mb-3" style="border-bottom: 2px solid #383838;">
                         <li class="nav-item">
                             <a class="nav-link fw-bold" style="color: #303030;" data-bs-toggle="collapse" href="#AboutBox"
                                role="button"
@@ -55,7 +64,11 @@
                     </ul>
                     <div class="row" id="NavGroup">
                         <div class="collapse multi-collapse" id="AboutBox" data-bs-parent="#NavGroup">
-                            Developed Se.MHSN and theMHD
+                            <pre>
+This project developed by:
+Seyed Mohsen Razavi Zadagan Jahromi   ||| 40030489
+Seyed Mahdi Mahdavi Mahdavi (theMHD)  ||| 40030490
+                            </pre>
                         </div>
                         <div class="collapse multi-collapse" id="HelpBox" data-bs-parent="#NavGroup">
                             here is help
@@ -94,23 +107,17 @@
                         </div>
                     </div>
                 </div>
-        <<<<<<< HEAD
-                <div class="wave"></div>
-                <div class="wave"></div>
-                <div class="wave"></div>
-                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-                        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-        ======
             </div>
         </div>
 
-        <div class="wave" style="height: 8em"></div>
-        <div class="wave" style="height: 8em"></div>
-        <div class="wave" style="height: 8em"></div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-                crossorigin="anonymous"></script>
-        <!-- partial -->
+        <div class="wave" style="height: 13rem"></div>
+        <div class="wave" style="height: 11rem"></div>
+        <div class="wave" style="height: 9rem"></div>
+        <div class="wave" style="height: 7rem"></div>
+        <div class="wave" style="height: 5rem"></div>
+        <div class="wave" style="height: 3rem"></div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
         >>>>>>> ab9a650f935d081ac98169d305c9a097d96dfa45
+
     </body>
 </html>
