--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2,21 +2,19 @@ body {
     margin: auto;
     overflow: auto;
     background-size: 400% 400%;
-    animation: gradient 15s ease infinite;
+    animation: gradient 8s ease infinite;
     font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-    background: linear-gradient(315deg, rgba(101, 0, 94, 1) 3%, rgba(60, 132, 206, 1) 38%, rgba(48, 238, 226, 1) 68%, rgba(255, 25, 25, 1) 98%) fixed;
+    background: linear-gradient(315deg, rgba(102, 1, 97, 0.8) 20%, rgba(42, 54, 213, 0.8) 40%, rgba(20, 251, 224, 0.8) 68%, rgba(255, 2, 24, 0.8) 92%) fixed;
 }
 
 @keyframes gradient {
-    0% {
-        background-position: 0% 0%;
-    }
-    50% {
-        background-position: 100% 100%;
-    }
-    100% {
-        background-position: 0% 0%;
-    }
+    0%  {background-color: rgb(102, 1, 97)}
+    25% {background-color: rgb(42, 54, 213)}
+    50%  {background-color: rgb(20, 251, 224)}
+    100% {background-color: rgb(255, 2, 24)}
+    50%  {background-color: rgb(20, 251, 224)}
+    25% {background-color: rgb(42, 54, 213)}
+    0%  {background-color: rgb(102, 1, 97)}
 }
 
 .wave {
@@ -68,3 +66,9 @@ body {
 }
 
 /* ------------------------- The components style part ------------------------- */
+
+#AboutBox {
+    color: #303030;
+    font-size: 20px;
+    font-weight: bold;
+}
