--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -65,8 +65,8 @@
                         <div class="collapse multi-collapse" id="AboutBox" data-bs-parent="#NavGroup">
                             <pre>
 This project developed by:
-Seyed Mohsen Razavi Zadagan Jahromi   ||| 40030489
-Seyed Mahdi Mahdavi Mahdavi (theMHD)  ||| 40030490
+Seyed Mohsen Razavi Zadagan Jahromi     ||| 40030489
+Seyed Mahdi Mahdavi Mortazavi (theMHD)  ||| 40030490
                             </pre>
                         </div>
                         <div class="collapse multi-collapse" id="HelpBox" data-bs-parent="#NavGroup">
