--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <title>Trie Dictionary Online</title>
         <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-        <link rel="icon" href="{% static 'img/header-1.png' %}" type="image/x-icon">
+        <link rel="icon" href="trilogo.png" type="image/x-icon">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
               integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
