--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -35,14 +35,15 @@
             <pre class="text-center text-light display-2 mb-0"
                style='height: 250px;
                        margin-top: 2rem;
-                       font-weight: 350;
                        padding-top: 55px;
+                       font-weight: bold;
                        background-size: 125px;
                        background-position-y: 31%;
                        background-position-x: 47.8%;
                        background-repeat: no-repeat;
                        font-family: "Segoe UI Light",serif;
-                       text-shadow: rgb(40,40,40) 0 5px 5px;
+                       text-shadow: rgba(10,10,10,0.5) 0 6px 3px;
+                       filter: drop-shadow(0 5px 5px rgba(10,10,10,0.9));
                        background-image: url("{% static 'img/trilogo_.png' %}");
                        '>
 <span style="font-weight: 600;">  Trie</span>
