--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -80,7 +80,7 @@ Dictionary Online</pre>
                         <div class="collapse multi-collapse" id="AboutBox" data-bs-parent="#NavGroup">
                                     <pre>
 This project developed by:
-Seyed Mohsen Razavi Zadagan Jahromi     ||| 40030489
+Seyed Mohsen Razavi Zadegan Jahromi     ||| 40030489
 Seyed Mahdi Mahdavi Mortazavi (theMHD)  ||| 40030490
                                     </pre>
                         </div>
