--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -44,14 +44,13 @@
                          background-position-x: 47.3%;
                          background-repeat: no-repeat;
                          font-family: "Segoe UI Light",serif;
-                         text-shadow: rgba(10,10,10,0.5) 0 6px 3px;
+                         text-shadow: rgba(10,10,10,0.5) 4px 6px 3px;
                          filter: drop-shadow(0 5px 5px rgba(10,10,10,0.9));
                          background-image: url("{% static 'img/trilogo_.png' %}");
                          '>
 <span style="font-weight: 600;">  Trie</span>
 Dictionary Online</pre>
-            {#    <img class="mx-auto d-block" width="350rem" height="140rem" src="{% static 'img/Untitled-1.png' %}" alt="">#}
-            <img class="mx-auto d-block" width="300rem" height="75rem" src="{% static 'img/header-1.png' %}" alt="">
+            {#   <img class="mx-auto d-block" width="300rem" height="75rem" src="{% static 'img/header-1.png' %}" alt="">#}
             {#===========================MAIN CARD=============================#}
 
             <div class="card mx-auto main-card">
