--- a/static/css/particles.css
+++ b/static/css/particles.css
@@ -1,11 +1,11 @@
 #webcoderskull{
-    position: absolute;
+    top: 0;
     left: 0;
-    top: 0%;
     width: 100%;
     text-align: center;
+    position: absolute;
 }
 
 canvas{
-    height:150vh;
+    height:100vh;
 }
