--- a/main/templates/_base.html
+++ b/main/templates/_base.html
@@ -6,7 +6,7 @@
         <title>Trie Dictionary Online</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="icon" href="{% static 'img/trilogo_.png' %}">
+        <link rel="icon" href="{% static 'extra files/trilogo_.png' %}">
         <link rel="stylesheet" href="{% static 'css/styles.css' %}">
         <link rel="stylesheet" href="{% static 'css/particles.css' %}">
 
