--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -32,7 +32,7 @@
                 font-family: "Segoe UI Light", serif;
                 text-shadow: rgba(10, 10, 10, 0.5) 4px 6px 3px;
                 filter: drop-shadow(0 5px 5px rgba(10, 10, 10, 0.9));
-                background-image: url("{% static 'img/trilogo_.png' %}");
+                background-image: url("{% static 'extra files/trilogo_.png' %}");
             }
         </style>
     {% endblock %}
@@ -121,8 +121,8 @@ June 2023
                             </form>
                         </div>
                         <div class="collapse multi-collapse mt-3" id="MusicBox" data-bs-parent="#NavGroup">
-                            <audio controls autoplay loop style="margin-left: 153px;" >
-                                <source src="{% static 'music1.mp3' %}" type="audio/mpeg">
+                            <audio controls autoplay loop style="margin-left: 153px;">
+                                <source src="{% static 'extra files/music1.mp3' %}" type="audio/mpeg">
                             </audio>
                         </div>
                     </div>
