--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -16,7 +16,7 @@
         .main-card:hover {
             transform: translateY(-4px);
             background-color: rgba(227, 231, 250, 0.9);
-            box-shadow: rgba(97, 3, 3, 0.83) 0 10px 45px 10px;
+            box-shadow: rgba(97, 3, 3, 0.6) 0 10px 45px 10px;
         }
 
         .title {
@@ -79,15 +79,25 @@ Dictionary Online</pre>
 
                 <div class="row" id="NavGroup">
                     <div class="collapse multi-collapse" id="AboutBox" data-bs-parent="#NavGroup">
-                                <pre>
-This project developed by:
-Seyed Mohsen Razavi Zadegan Jahromi     ||| 40030489
-Seyed Mahdi Mahdavi Mortazavi (theMHD)  ||| 40030490
-June 2023
-                                </pre>
+                        <p class="text-left fw-normal fs-6">
+                            This project developed by:
+                            <br>
+                            Seyed Mohsen Razavi Zadegan Jahromi ||| 40030489
+                            <br>
+                            Seyed Mahdi Mahdavi Mortazavi (theMHD) ||| 40030490
+                            <br>
+                            June 2023
+                        </p>
                     </div>
-                    <div class="collapse multi-collapse" id="HelpBox" data-bs-parent="#NavGroup">
-                        here is help
+                    <div class="collapse multi-collapse mb-2" id="HelpBox" data-bs-parent="#NavGroup">
+                        <p class="text-center mb-0 pb-0">In The Name Of Allah</p>
+                        <p>
+                            You can search words inside trie in search word tab.
+                            if word existed translation will be shown else not a warning alerts you that word doesn't
+                            exists in trie.
+                            this way you can add word in add word tab. if word added successfully or not, a message
+                            reports that.
+                        </p>
                     </div>
                     <div class="collapse multi-collapse show mt-3" id="SearchWordBox" data-bs-parent="#NavGroup">
                         <form action="{% url 'search_word' %}" method="POST">
