--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -15,7 +15,7 @@
 
             .main-card:hover {
                 transform: translateY(-4px);
-                background-color: rgba(227, 231, 250, 0.9);
+                background-color: rgba(227, 231, 250, 0.65);
                 box-shadow: rgba(97, 3, 3, 0.83) 0 10px 45px 10px;
             }
 
@@ -30,7 +30,7 @@
                 background-position-x: 47.3%;
                 background-repeat: no-repeat;
                 font-family: "Segoe UI Light", serif;
-                text-shadow: rgba(10, 10, 10, 0.5) 4px 6px 3px;
+                text-shadow: rgba(10, 10, 10, 0.5) 3px 6px 3px;
                 filter: drop-shadow(0 5px 5px rgba(10, 10, 10, 0.9));
                 background-image: url("{% static 'extra files/trilogo_.png' %}");
             }
@@ -79,12 +79,12 @@ Dictionary Online</pre>
 
                     <div class="row" id="NavGroup">
                         <div class="collapse multi-collapse" id="AboutBox" data-bs-parent="#NavGroup">
-                                <pre>
-This project developed by:
-Seyed Mohsen Razavi Zadegan Jahromi     ||| 40030489
-Seyed Mahdi Mahdavi Mortazavi (theMHD)  ||| 40030490
-June 2023
-                                </pre>
+                            <p>
+                                <br>This project developed by:
+                                <br>Seyed Mohsen Razavi Zadegan Jahromi     ||| 40030489
+                                <br>Seyed Mahdi Mahdavi Mortazavi (theMHD)  ||| 40030490
+                                <br>June 2023
+                            </p>
                         </div>
                         <div class="collapse multi-collapse" id="HelpBox" data-bs-parent="#NavGroup">
                             here is help
